CRUD, LocalStorage, DOM Manipulation - Complete

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div id="app">
-        <table class="budget-tracker">
+        <!-- <table class="budget-tracker">
             <thead>
                 <tr>
                     <th>Date</th>
@@ -44,7 +44,7 @@
             </tbody>
             <tbody>
                 <tr>
-                    <td colspan="5"><button type="button" class="new-entry">New Entry</button></td>
+                    <td colspan="5" class="controls"><button type="button" class="new-entry">New Entry</button></td>
                 </tr>
             </tbody>
             <tfoot>
@@ -55,7 +55,7 @@
                     </td>
                 </tr>
             </tfoot>
-        </table>
+        </table> -->
     </div>
 </body>
 </html>
